# NVIDIA-MultimodalResearchAssitant-main

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
Tests/: 1. scrape_local.py  2. scrape_s3.py  3. snowflake_setup.py  4. snowflake_load.py  5. pdf_to_text.py  SQLAlchemy_Llama_Snowflake.ipynb  grid_view.py  sql_llama_snowflake.py
airflow_docker_pipelines/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
airflow_docker_pipelines/dags/: pdf_extraction_dag.py  scrape_cfa_publications_dag.py  snowflake_load_dag.py  snowflake_setup_dag.py
backend/: Dockerfile  README.md  requirements.txt
backend/fast_api/: README.md  fastapi_main.py
backend/fast_api/routers/: README.md  rag_router.py  s3_router.py  snowflake_router.py  summarization_router.py
backend/utils/: README.md  helper_functions.py  pdf_processor.py
diagrams/: diagrams.ipynb
documentation/: Assignment 3-NVIDIA Multimodal Research Assistant  .docx
frontend/: Dockerfile  README.md  app.py  requirements.txt  utils.py
frontend/streamlit_pages/: README.md  detail_view.py  grid_view.py  qa_interface.py  report_page.py
